--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />
+     <!--<add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />-->
+    <add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;User ID=zeiterfassung;Password=zeiterfassung123" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,21 +19,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    
-
-    
 
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <!--
     <authentication mode="Windows">
     </authentication>
-            <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
-
-        -->
-
-
     <customErrors mode="Off" ></customErrors> 
+    
+    -->
+    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
+    
   </system.web>
   <system.webServer>
     
